--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
 	<groupId>com.github.remis-thoughts</groupId>
 	<artifactId>ivy-maven-plugin</artifactId>
-	<version>1.1.1-SNAPSHOT</version>
+	<version>1.2.0-SNAPSHOT</version>
 	<packaging>maven-plugin</packaging>
 
 	<name>Maven Ivy Plugin</name>
@@ -35,7 +35,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.version>3.2.3</maven.version>
+        <maven.version>3.1.1</maven.version>
     </properties>
 
 	<dependencies>
@@ -147,7 +147,7 @@
 						</goals>
 						<configuration>
 							<quiet>true</quiet>
-                            <additionalparam>-Xdoclint:none</additionalparam>
+                            <additionalparam>${doclint.config}</additionalparam>
 						</configuration>
 					</execution>
 				</executions>
@@ -157,10 +157,22 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.2</version>
 				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>1.5</source>
+					<target>1.5</target>
 				</configuration>
 			</plugin>
 		</plugins>
 	</build>
+
+	<profiles>
+		<profile>
+			<id>java8</id>
+			<activation>
+				<jdk>1.8</jdk>
+			</activation>
+			<properties>
+				<doclint.config>-Xdoclint:none</doclint.config>
+			</properties>
+		</profile>
+	</profiles>
 </project>
